@@ -68,6 +68,7 @@
   <!-- include -->
 
   <include package=".browser" />
+  <include package=".job" />
   <include package=".personal" />
   <include package=".process" />
   <include package=".stateful" />
